--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
               </li>
             </ul>
           </nav>
-          <a href="index.html" class="logo">
+          <a class="logo" href="index.html">
             <img src="./images/logo.png" alt="logo">
           </a>
           <nav class="menu">
@@ -42,6 +42,21 @@
           <button class="header__btn">
             <img src="./images/icon_menu.svg" alt="icon-menu">
           </button>
+          <div class="rightside-menu">
+            <button class="rightside-menu__close">
+              <img src="./images/close.svg" alt="close">
+            </button>
+            <div class="rightside-menu__content">
+              <a class="rightside-menu__logo" href="index.html">
+                <img src="./images/rightside-menu-logo.png" alt="rightside-menu-logo">
+              </a>
+              <h4 class="rightside-menu__title">Furniture for life</h4>
+              <p class="rightside-menu__text">
+                Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn
+              </p>
+              <img class="rightside-menu__image" src="./images/rightside-menu-image.jpg" alt="image">
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -55,7 +70,7 @@
             <div class="footer__info">
               <h6 class="footer__info-title">Contact Us</h6>
               <p class="footer__info-text">Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably occupy</p>
-              <a href="mailto:ouremailaddress@email.com" class="footer__info-email">ouremailaddress@email.com</a>
+              <a class="footer__info-email" href="mailto:ouremailaddress@email.com">ouremailaddress@email.com</a>
               <form action="" class="footer__form">
                 <input class="footer__form-input" type="email" placeholder="Subscribe by email">
                 <button class="footer__form-button" type="submit">Send</button>
